syntax = "proto3";

package keeper_proto;

option go_package = "proto/keeper";

message NewUserRequest{
    string login = 1;
    string password = 2;
}

message NewUserResponse{

}

message LoginRequest{
    string login = 1;
    string password = 2;
}

message LoginResponse{
    string token = 1;
}

message AddCredentialsRequest{
    string login = 1;
    string password = 2;
    string description = 3;
}

message AddCredentialsResponse{

}


service KeeperServer {
  rpc registration(NewUserRequest) returns (NewUserResponse);
  rpc login(LoginRequest) returns (LoginResponse);
  rpc addCredentials (AddCredentialsRequest) returns (AddCredentialsResponse);
} 
